# action-watcher

./: Cargo.toml  README.md
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
examples/: example.yaml
src/: command_runner.rs  config.rs  file_watcher.rs  lib.rs  main.rs
tests/: config_integration.rs  file_watcher_integration.rs
