[package]
name = "action-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.10"
notify = "6.1.1"
serde_yaml = "0.9.34+deprecated"
tempfile = "3.10.1"
anyhow = "1.0.86"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.39.1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-macros = "2.4.0"
